--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -166,6 +166,9 @@
     <entry name="SistersOfBattle/MeltaBombDescription" value="Grants Zephyrims the ability to deploy a melta bomb that is highly effective against heavy vehicles and fortifications." />
     <entry name="SistersOfBattle/MinistorumIndoctrination" value="Ministorum Indoctrination / Universal Catechism" />
     <entry name="SistersOfBattle/MinistorumIndoctrinationDescription" value="Grants Martyr Spirit to Lightning Fighters, Avengers Strike Fighters and Cerastus Knight-Lancers. Grants Shield Of Faith to Lightning Fighters, Avengers Strike Fighters and Cerastus Knight-Lancers." />
+    <entry name="SistersOfBattle/Sacrifice" value="Sacrifice" />
+    <entry name="SistersOfBattle/SacrificeDescription" value="Grants Hospitallers ability to sacrifice themselves in order to completely heal and restore morale of adjacent units." />
+    <entry name="SistersOfBattle/SacrificeFlavor" value="Suffering is a staple prayer for the Adepta Sororitas, and a martyr’s fate only brings greater glory to the God-Emperor." />
     <entry name="SistersOfBattle/SisterAssassinorum" value="<string name='Units/SistersOfBattle/SisterAssassinorum'/>" />
     <entry name="SistersOfBattle/SisterAssassinorumDescription" value="<string name='Units/SistersOfBattle/SisterAssassinorumDescription'/>" />
     <entry name="SistersOfBattle/SisterAssassinorumFlavor" value="<string name='Units/SistersOfBattle/SisterAssassinorumFlavor'/>" />
