--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -178,6 +178,8 @@
     <entry name="SpaceMarines/AdditionalHeavyBolterDescription" value="Grants Fortress of Redemption additional heavy bolter.<br/><br/><string name='Actions/UpgradeDisclaimer'/>" />
     <entry name="SpaceMarines/AdditionalHeavyBolters" value="Install Heavy Bolters" />
     <entry name="SpaceMarines/AdditionalHeavyBoltersDescription" value="Grants Predator additional heavy bolters.<br/><br/><string name='Actions/UpgradeDisclaimer'/>" />
+    <entry name="SpaceMarines/AdditionalMultiMelta" value="Install Multi Melta" />
+    <entry name="SpaceMarines/AdditionalMultiMeltaDescription" value="Grants Land Speeder or Land Raider additional multi melta.<br/><br/><string name='Actions/UpgradeDisclaimer'/>" />
     <entry name="SpaceMarines/AdditionalStormBolter" value="Install Storm Bolter" />
     <entry name="SpaceMarines/AdditionalStormBolterDescription" value="Grants Razorback additional storm bolter, but removes ability to transport cargo.<br/><br/><string name='Actions/UpgradeDisclaimer'/>" />
     <entry name="SpaceMarines/Infiltrate" value="Camo Cloak" />
